--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import './components/backdrop';
 @import './components/modal-close-btn';
 @import './components/modal-form';
+@import './components/mobile-menu';
 
 @import './layout/header';
 @import './layout/modal-section';
