--- a/sass/layout/_modal-section.scss
+++ b/sass/layout/_modal-section.scss
@@ -7,26 +7,49 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../sekt.jpg);
-    background-size: 1600px;
-    background-position: center;
-  }
-  .modals__page {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--primary-text-color-theme-light);
-    margin-bottom: 40px;
-  }
-  
+      url(/images/mobile/hero-img.png);
+    
+
+}
   .modals {
     display: flex;
     flex-wrap: wrap;
-    width: 700px;
+    width: 480px;
     justify-content: center;
     padding-top: 200px;
     padding-bottom: 200px;
   }
+
+
+// .modal-section {
+//     background: rgba(47, 48, 58, 0.4);
+//     background-color: var(--no-name-text-color);
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-image: linear-gradient(
+//         rgba(47, 48, 58, 0.4),
+//         rgba(47, 48, 58, 0.4)
+//       ),
+//       url(../sekt.jpg);
+//     background-size: 1600px;
+//     background-position: center;
+//   }
+//   .modals__page {
+//     font-weight: 900;
+//     font-size: 44px;
+//     line-height: 1.36;
+//     text-align: center;
+//     letter-spacing: 0.06em;
+//     text-transform: uppercase;
+//     color: var(--primary-text-color-theme-light);
+//     margin-bottom: 40px;
+//   }
+  
+//   .modals {
+//     display: flex;
+//     flex-wrap: wrap;
+//     width: 700px;
+//     justify-content: center;
+//     padding-top: 200px;
+//     padding-bottom: 200px;
+//   }
