--- a/sass/layout/_modal-section.scss
+++ b/sass/layout/_modal-section.scss
@@ -2,22 +2,59 @@
     background: rgba(47, 48, 58, 0.4);
     background-color: var(--no-name-text-color);
     background-repeat: no-repeat;
-    background-size: cover;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url(/images/mobile/hero-img.png);
-    
+      background-size: 480px;
 
 }
   .modals {
     display: flex;
     flex-wrap: wrap;
-    width: 480px;
     justify-content: center;
+    padding-top: 118px;
+    padding-bottom: 118px;
+
+  }
+  .modals__page {
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--primary-text-color-theme-light);
+    margin-bottom: 40px;
+  }
+
+  @media screen and (min-width:768px) {
+    .modal-section {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../sekt.jpg);
+    background-size: 768px 400px;
+    background-position: center;
+  }
+  .modals {
+  padding-left: 200px;
+  padding-right: 200px;
+  }
+  }
+  @media screen and (min-width:1200px) {
+    .modal-section {
+    background-size: 1600px;
+  }
+    .modals__page {
+    font-size: 44px;
+  }
+    .modals {
     padding-top: 200px;
     padding-bottom: 200px;
+  }
   }
 
 
