--- a/css/main.css
+++ b/css/main.css
@@ -629,7 +629,7 @@ body {
   background: rgba(47, 48, 58, 0.4);
   background-color: var(--no-name-text-color);
   background-repeat: no-repeat;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/mobile/hero-img.png);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sekt.jpg);
   background-size: 480px;
 }
 
