--- a/sass/layout/_modal-section.scss
+++ b/sass/layout/_modal-section.scss
@@ -6,7 +6,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(/images/mobile/hero-img.png);
+      url(../sekt.jpg);
       background-size: 480px;
 
 }
