--- a/css/main.css
+++ b/css/main.css
@@ -629,8 +629,8 @@ body {
   background: rgba(47, 48, 58, 0.4);
   background-color: var(--no-name-text-color);
   background-repeat: no-repeat;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sekt.jpg);
-  background-size: 480px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/desktop/Image-hero/hero.jpg);
+  background-size: cover;
 }
 
 .modals {
@@ -649,7 +649,7 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-text-color-theme-light);
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
