--- a/sass/layout/_modal-section.scss
+++ b/sass/layout/_modal-section.scss
@@ -6,9 +6,8 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../sekt.jpg);
-      background-size: 480px;
-
+      url(/images/desktop/Image-hero/hero.jpg);
+      background-size: cover;
 }
   .modals {
     display: flex;
@@ -26,7 +25,7 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--primary-text-color-theme-light);
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
 
   @media screen and (min-width:768px) {
