--- a/sass/components/_modal-close-btn.scss
+++ b/sass/components/_modal-close-btn.scss
@@ -1,13 +1,13 @@
 .modal {
-    position: absolute;
-    height: 581px;
-    width: 528px;
-    background-color: var(--primary-text-color-theme-light);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 40px 40px;
-  }
+  position: absolute;
+  height: 581px;
+  width: 450px;
+  background-color: var(--primary-text-color-theme-light);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 40px 40px;
+}
   .modal-close__btn {
     position: absolute;
     top: 8px;
@@ -29,3 +29,15 @@
       fill: var(--accent-color);
     }
   }
+@media screen and (min-width:480px) {
+  .modal {
+    position: absolute;
+    height: 609px;
+    width: 450px;
+    background-color: var(--primary-text-color-theme-light);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 40px 40px;
+  }
+}
