--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -82,13 +82,15 @@
 .footer-container {
   display: block;
   text-align: center;
-  // align-items: baseline;
 }
 .invate {
-  // margin-right: 93px;
   margin-bottom: 60px;
 }
-
+.subscribe-form{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 .subscribe__title {
   font-family: var(--primary-font);
   font-weight: 700;
@@ -99,12 +101,10 @@
   margin-bottom: 20px;
 }
 
-.subscribe-form__wrapper {
-  display: block;
+.subscribe-form__box {
   margin-bottom: 20px;
 }
 .subscribe-form__field {
-  // margin-right: 12px;
 }
 .subscribe-form__input {
   width: 358px;
@@ -134,14 +134,16 @@
   justify-content: center;
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  margin-left: auto;
-  margin-right: auto;
 }
-
 .subscribe-form__icon {
   margin-left: 10px;
   align-items: center;
   fill: var(--primary-text-color-theme-light);
+}
+@media screen and (min-width: 768px) and (max-width: 1199px){
+.subscribe-form {
+    width: 450px;
+}
 }
 @media screen and (min-width: 768px) {
   .footer-container {
@@ -157,6 +159,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .subscribe-form__input {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-container {
@@ -167,6 +172,9 @@
   .contact {
     margin-right: 70px;
     margin-bottom: 0;
+  }
+  .subscribe-form{
+    flex-wrap: nowrap;
   }
   .subscribe-form__field {
     margin-right: 12px;
@@ -180,4 +188,14 @@
   .subscribe__title {
     text-align: left;
   }
+  .subscribe-form__input {
+    width: 358px;
+  }
+  .subscribe-form__box {
+    margin-bottom: 0;
+  }
+  .invate {
+    margin-bottom: 0;
 }
+}
+
