--- a/css/main.css
+++ b/css/main.css
@@ -176,8 +176,8 @@ body {
 
 .modal {
   position: absolute;
-  height: 581px;
-  width: 450px;
+  height: 550px;
+  width: 337px;
   background-color: var(--primary-text-color-theme-light);
   top: 50%;
   left: 50%;
@@ -218,6 +218,12 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 40px 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    height: 581px;
+    width: 528px;
   }
 }
 .modal-form__title {
@@ -316,7 +322,7 @@ body {
   margin-bottom: 30px;
   font-family: var(--primary-font);
   font-weight: 400;
-  font-size: 12px;
+  font-size: 8px;
   line-height: 1.71;
   color: var(--second-icon-color);
 }
@@ -324,7 +330,7 @@ body {
 .check-box__policy {
   font-family: var(--primary-font);
   font-weight: 400;
-  font-size: 12px;
+  font-size: 8px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration-line: underline;
@@ -378,6 +384,22 @@ body {
   background-color: #188ce8;
 }
 
+@media screen and (min-width: 480px) {
+  .check-box__policy {
+    font-size: 12px;
+  }
+  .modal-form-check__field {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .check-box__policy {
+    font-size: 14px;
+  }
+  .modal-form-check__field {
+    font-size: 14px;
+  }
+}
 .mobile-menu {
   position: fixed;
   top: 0;
