--- a/sass/components/_modal-close-btn.scss
+++ b/sass/components/_modal-close-btn.scss
@@ -1,7 +1,7 @@
 .modal {
   position: absolute;
-  height: 581px;
-  width: 450px;
+  height: 550px;
+  width: 337px;
   background-color: var(--primary-text-color-theme-light);
   top: 50%;
   left: 50%;
@@ -39,5 +39,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 40px 40px;
+  }
+}
+@media screen and (min-width:1200px) {
+  .modal {
+    height: 581px;
+    width: 528px;
   }
 }
