--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 40px 40px;
+  padding: 25px 25px;
 }
 
 .modal-close__btn {
@@ -210,13 +210,8 @@ body {
 
 @media screen and (min-width: 480px) {
   .modal {
-    position: absolute;
     height: 609px;
     width: 450px;
-    background-color: var(--primary-text-color-theme-light);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding: 40px 40px;
   }
 }
@@ -229,7 +224,7 @@ body {
 .modal-form__title {
   font-family: var(--primary-font);
   font-weight: 700;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.15;
   text-align: center;
   color: var(--primary-text-dark-color);
@@ -322,7 +317,7 @@ body {
   margin-bottom: 30px;
   font-family: var(--primary-font);
   font-weight: 400;
-  font-size: 8px;
+  font-size: 9px;
   line-height: 1.71;
   color: var(--second-icon-color);
 }
@@ -330,7 +325,7 @@ body {
 .check-box__policy {
   font-family: var(--primary-font);
   font-weight: 400;
-  font-size: 8px;
+  font-size: 9px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration-line: underline;
@@ -387,6 +382,9 @@ body {
 @media screen and (min-width: 480px) {
   .check-box__policy {
     font-size: 12px;
+  }
+  .modal-form__title {
+    font-size: 20px;
   }
   .modal-form-check__field {
     font-size: 12px;
