--- a/css/main.css
+++ b/css/main.css
@@ -466,8 +466,8 @@ body {
 }
 
 .mobile-menu__contact {
-  margin-top: 302px;
-  margin-bottom: 64px;
+  margin-top: 250px;
+  margin-bottom: 40px;
 }
 
 .mobile-menu__contact-item {
@@ -495,7 +495,7 @@ body {
 .mobile-menu__contact-list {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 12px;
 }
 
 .mobile-menu__contact-items:not(:last-child)::after {
@@ -504,7 +504,7 @@ body {
   position: absolute;
   content: "";
   background-color: rgba(33, 33, 33, 0.2);
-  transform: translate(10px, 0);
+  transform: translate(6px, 0);
 }
 
 .mobile-menu__contact-network {
@@ -516,6 +516,18 @@ body {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 480px) {
+  .mobile-menu__contact {
+    margin-top: 302px;
+    margin-bottom: 64px;
+  }
+  .mobile-menu__contact-list {
+    gap: 20px;
+  }
+  .mobile-menu__contact-items:not(:last-child)::after {
+    transform: translate(10px, 0);
+  }
+}
 .menu {
   display: none;
 }
