--- a/css/main.css
+++ b/css/main.css
@@ -510,7 +510,7 @@ body {
 .mobile-menu__contact-network {
   font-family: var(--primary-font);
   font-weight: 500;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
@@ -526,6 +526,9 @@ body {
   }
   .mobile-menu__contact-items:not(:last-child)::after {
     transform: translate(10px, 0);
+  }
+  .mobile-menu__contact-network {
+    font-size: 18px;
   }
 }
 .menu {
