--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -103,7 +103,7 @@
 .mobile-menu__contact-network {
   font-family: var(--primary-font);
   font-weight: 500;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
@@ -120,6 +120,9 @@
     &:not(:last-child)::after {     
       transform: translate(10px,0);
     }
-  
+  }
+  .mobile-menu__contact-network {
+    font-size: 18px;
+
   }
 }
