--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,7 @@
 .page-header{
   padding-top: 16px;
   padding-bottom: 16px;
+  border-bottom: 1px solid var(--border-color);
 }
 .header-box{
   display: flex;
